Fixing page width overflow after bottom cards change (#276)

--- a/src/css/docs-ndl.css
+++ b/src/css/docs-ndl.css
@@ -588,6 +588,11 @@ body.docs-ndl .cards .sectionbody > div.sect2 {
   /* margin-right: 1rem; */
 }
 
+body.docs-ndl .cards.bottom-cards .sectionbody > div.sect2 {
+  flex: 0 1 49%;
+}
+  /* margin-right: 1rem; */
+
 body.docs-ndl.explainer .sectionbody > div.sect2 {
   flex: 0 1 49%;
 }
@@ -731,11 +736,6 @@ body.docs-ndl .widget.highlights:nth-of-type(odd) .icon {
 /* We can use this rule to apply styles to the 2nd, 4th highlights etc widget */
 body.docs-ndl .widget.highlights:nth-of-type(even) .openblock {
   /* margin-right:40px; */
-}
-
-/* For the bottom cards */
-body.docs-ndl .cards:nth-last-child(-n+2) .sectionbody {
-  flex: 0 0 152%;
 }
 
 body.docs-ndl body.docs-ndl .cards .sect2 .icon img {
@@ -940,6 +940,7 @@ body.docs-ndl .cards .sect2 .ulist ul li {
     margin: 1rem auto;
   }
 
+  body.docs-ndl .bottom-cards .sect2 > a,
   body.docs-ndl .cards .sect2 > a {
     align-items: center;
   }
@@ -953,6 +954,7 @@ body.docs-ndl .cards .sect2 .ulist ul li {
     text-align: left;
   }
 
+  body.docs-ndl .cards.bottom-cards .sectionbody > div.sect2,
   body.docs-ndl .cards .sectionbody > div.sect2 {
     /* min-width: 90%; */
     flex: 1 1 100%;
